# weatherstation

./: README.md
hardware/capteur/: 1555CGY-pcb.dxf  capteur-cache.lib  capteur-rescue.lib  capteur.kicad_pcb  capteur.kicad_pcb-bak  capteur.kicad_prl  capteur.kicad_pro  capteur.kicad_sch  capteur.net  capteur.pro  capteur.sch  capteur.sch-bak  fp-info-cache  fp-lib-table  support-pluvio.dxf  support-pluvio.scad  sym-lib-table
hardware/capteur/CAD/: 1555CGY-couvercle.dxf  1555CGY-pcb.dxf  enveloppe-tube-pluvio.dxf  enveloppe-tube-thermo.dxf  plaque-boitier.dxf  plaque-pluvio.dxf  support-pluvio-fa30_10.stl  support-pluvio.scad  support-thermo-fn100.stl  support-thermo-fn50.stl  support-thermo.dxf  support-thermo.scad
hardware/capteur/fab/: capteur-B_Cu.gbr  capteur-F_Cu.gbr  capteur.drl
hardware/centrale/: centrale-cache.lib  centrale-rescue.lib  centrale.kicad_pcb  centrale.kicad_pcb-bak  centrale.kicad_prl  centrale.kicad_pro  centrale.kicad_sch  centrale.net  centrale.pro  centrale.sch  centrale.sch-bak  fp-info-cache  fp-lib-table  keys.kicad_pcb  keys.kicad_prl  keys.kicad_pro  keys.kicad_sch  keys.pro  keys.sch  lime2.kicad_sch  lime2.sch  sym-lib-table
hardware/centrale/CAD/: PCB-mesures.dxf  PCB.dxf  display-lock.scad  display-lock.stl  display.dxf  display.scad  display.stl  pcb.scad  pcb.stl
hardware/centrale/fab/: keys-B_Cu.gbr  keys.drl
hardware/centrale/rescue-backup/: sym-lib-table-2021-03-11-19-09-22
hardware/coupleur/: coupleur-cache.lib  coupleur.kicad_pcb  coupleur.kicad_pcb-bak  coupleur.net  coupleur.pro  coupleur.sch-bak
hardware/coupleur-5p/: coupleur-5p-cache.lib  coupleur-5p.kicad_pcb  coupleur-5p.pro  coupleur-5p.sch
hardware/coupleur-5p/fab/: coupleur-5p-B_Cu.gbr  coupleur-5p.drl
hardware/coupleur-duallink/: coupleur-duallink.kicad_pcb  coupleur-duallink.kicad_pcb-bak  coupleur-duallink.net  coupleur-duallink.pro  coupleur-duallink.sch  coupleur-duallink.sch-bak  sym-lib-table
hardware/coupleur/CAD/: RX2007_S-5-board.dxf  RX2007_S-5.dxf
hardware/coupleur/fab/: coupleur-B_Cu.gbr  coupleur.drl
hardware/power/: fp-info-cache  power-cache.lib  power-rescue.lib  power.kicad_pcb  power.kicad_pcb-bak  power.kicad_prl  power.kicad_pro  power.kicad_sch  power.net  power.pro  power.sch  power.sch-bak  sym-lib-table
hardware/power/CAD/: base.dxf  pcb.dxf  support.scad
hardware/vetus/: fp-info-cache  sym-lib-table  vetus-cache.lib  vetus-rescue.lib  vetus.kicad_pcb  vetus.kicad_pcb-bak  vetus.kicad_pcb-cut  vetus.kicad_prl  vetus.kicad_pro  vetus.kicad_sch  vetus.net  vetus.pro  vetus.sch  vetus.sch-bak
software/capteur/: Makefile  i2c.c  i2c.h  main.c  nmea2000_user.h
software/centrale/: WEATHERSTATION  lime2-weatherstation.dts
software/centrale/batt_status/: batt_status.c
software/centrale/display/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.cpp
software/centrale/display/N2K/: NMEA2000.cpp  NMEA2000.h  nmea2000_data.cpp  nmea2000_defs.h  nmea2000_defs_rx.h  nmea2000_defs_tx.h  nmea2000_frame.h  nmea2000_rxtx.cpp
software/centrale/display/lv_drivers/bme280/: lv_bme280.c
software/centrale/display/lv_drivers/display/: ST7586.c  ST7586.h  monitor.c  monitor.h
software/centrale/display/lv_drivers/indev/: events_buttons.c  events_buttons.h  mouse.c  mouse.h  mousewheel.c  mousewheel.h
software/centrale/display/lv_meteo/: font_lib16.c  font_lib20.c  font_lib24.c  font_lib28.c  hal.h  hal_meteo.c  hal_sdl.c  meteo.c  meteo.h  meteo_data.h  meteo_font.h  meteo_page_main.c  meteo_pages.h
software/power/: Makefile  i2c.c  i2c.h  main.c  nmea2000_user.h  ntc_tab.c  ntc_tab.h  serial.c
software/vetus/: Makefile  i2c.c  i2c.h  main.c  nmea2000_user.h  pic18f26k80.lkr
software/weewx/envstat_service/: envstat.py
software/weewx/n2k_driver/: install.py  readme.txt
